<resources>
    <string name="term_and_cond" translatable="false">Please read these <b>Terms of Service</b>
        carefully before using the Chatbot. By accessing or using the service, you agree to be bound by these terms.
        If you disagree with any part of the terms, then you may not access the service.\n\n
        <br>1. During the conversation, your medical data will be scraped and collected.\n</br>
        <br>2. We will store the PIIs and medical data to use it for symptom tracking and for research purposes.\n</br>
        <br>3. We may share your data with third parties for research purposes only.</br>\n\n
        <br><b>I agree to these terms and conditions</b></br>

</string>
    <string name="app_name">WashKaro - TB</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Got It</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nextQues">Next</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="begin">Begin</string>
    <string name="sign_out">Sign Out</string>
    <string name="start_phone_auth">Send</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number in +91 format</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="verification_code_help">You will receive an OTP soon!</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt" translatable="false">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="tavlab_logo">Tav Lab at IIIT Delhi</string>
    <string name="precog_logo">Precog Lab at IIIT Delhi</string>
    <string name="iiitd_logo">IIIT Delhi</string>
    <string name="bt_not_supported">Bluetooth is not supported on this device.</string>
    <string name="bt_ads_not_supported">Bluetooth Advertisements are not supported on this device.</string>
    <string name="start_error_prefix">Start Advertising failed: </string>
    <string name="start_error_already_started">already started.</string>
    <string name="start_error_too_large">data packet exceeded 31 Byte limit.</string>
    <string name="start_error_unsupported">not supported on this device.</string>
    <string name="start_error_internal">internal error.</string>
    <string name="start_error_too_many">too many advertisers.</string>
    <string name="seconds">seconds.</string>
    <string name="scan_start_toast">Scanning for</string>
    <string name="start_error_unknown">unknown error</string>
    <string name="advertising_timedout">Advertising stopped due to timeout.</string>
    <string name="login">Login</string>
    <string name="user_id_key" translatable="false">user_id_key_pref</string>
    <string name="uuid_id_key" translatable="false">uuid_id_key_pref</string>
    <string name="phone_key" translatable="false">phone_key_pref</string>
    <string name="state_key" translatable="false">status_key_pref</string>
    <string name="shared_prefs_file" translatable="false">shared_prefs</string>
    <string name="user_user_state_notif" translatable="false">user_user_state_notif</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">infection_alert_channel</string>
    <string name="default_notification_channel_name" translatable="false">infectionAlert</string>
    <string name="msg_subscribe_failed">Failed to subscribe to infectionAlert topic</string>
    <string name="fcm_message" translatable="false">WashKaro</string>
    <string name="network_not_enabled">Location is not enabled</string>
    <string name="location_is_not_enabled">Location is not enabled</string>
    <string name="show_location_setting">Enable Location</string>
    <string name="cancel_btn">Cancel</string>
    <string name="share_this_app">Share this app</string>
    <string name="share_content">Help stop the spread of WASH diseases by sharing this app with family and friends.</string>
    <string name="presented_to_you_by">WashKaro, presented to you by</string>
    <string name="reference">References</string>
    <string name="tbcindia" translatable="false">Central TB Division, Ministry of Health &amp; Family Welfare, Government of India</string>
    <string name="tbass" translatable="false">The Tuberculosis Association of India</string>
    <string name="tbcindia_web" translatable="false">https://tbcindia.gov.in/</string>
    <string name="tbassindia_web" translatable="false">http://tbassnindia.org/</string>
    <string name="relevant">Relevant</string>
    <string name="irrelevant">Irrelevant</string>
    <string name="priyanka">Priyanka Syal</string>
    <string name="priyanka_tag">Software Engineer, Microsoft IDC</string>
    <string name="chirag">Chirag Jain</string>
    <string name="chirag_tag">Undergraduate, IIIT Delhi</string>
    <string name="pk">Dr Ponnurangam Kumaraguru</string>
    <string name="pk_description">Professor (CSE), IIIT Delhi</string>
    <string name="tav">Dr Tavpritesh Sethi</string>
    <string name="tav_description">Assistant Professor(CB), IIIT Delhi</string>
    <string name="Pradeep">Pradeep Kumar</string>
    <string name="Pradeep_tag">MTech CSE, IIIT Delhi</string>
    <string name="Sudeep">Sudeep Vig</string>
    <string name="Sudeep_tag">MTech CSE, IIIT Delhi</string>
    <string name="rohan">Rohan Pandey</string>
    <string name="rohan_tag">Undergraduate, SNU</string>
    <string name="kanav">Kanav Bhagat</string>
    <string name="kanav_tag">Undergraduate, IIIT Delhi</string>
    <string name="vaibhav">Vaibhav Gautam</string>
    <string name="vaibhav_tag">Undergraduate, SNU</string>
    <string name="raunak">Raunak Mokhasi</string>
    <string name="himanshu">Himanshu Sharma</string>
    <string name="himanshu_tag">Undergraduate, GL Bajaj Institute</string>
    <string name="bhavika">Bhavika Rana</string>
    <string name="bhavika_tag">Undergraduate, IIIT Delhi</string>
    <string name="harsh">Harsh Bandhey</string>
    <string name="harsh_tag">Undergraduate, IIIT Delhi</string>
    <string name="vihaan">Vihaan Misra</string>
    <string name="vihaan_tag">Undergraduate, NSUT</string>
    <string name="vrinda">Vrinda Narayan</string>
    <string name="vrinda_tag">Undergraduate, IIIT Delhi</string>
    <string name="yashwin">Yashwin Agrawal</string>
    <string name="yashwin_tag">Undergraduate, IIIT Delhi</string>
    <string name="raunak_tag">Undergraduate, IIIT Delhi</string>
    <string name="tanuj">Tanuj Dabas</string>
    <string name="tanuj_tag">Undergraduate, IIIT Delhi</string>
    <string name="rishabh">Rishabh Jalan</string>
    <string name="ayush">Ayush Garg</string>
    <string name="akshat">Akshat Wadhwa</string>
    <string name="PradeepURL" translatable="false">https://www.linkedin.com/in/pradeep-kumar-10065b15b/</string>
    <string name="sudeepURL" translatable="false">https://www.linkedin.com/in/sudeep-vig-038543151/</string>
    <string name="precogURL" translatable="false">http://precog.iiitd.edu.in/</string>
    <string name="iiitdURL" translatable="false">https://www.iiitd.ac.in/</string>
    <string name="tavlabURL" translatable="false">https://tavlab.iiitd.edu.in/</string>
    <string name="chiragURL" translatable="false">https://www.linkedin.com/in/jnchirag/</string>
    <string name="priyankaURL" translatable="false">https://www.linkedin.com/in/priyanka-syal-671b9495/</string>
    <string name="pkURL" translatable="false">https://www.linkedin.com/in/ponguru/</string>
    <string name="tavURL" translatable="false">https://www.linkedin.com/in/tavpritesh/</string>
    <string name="rohanURL" translatable="false">https://www.linkedin.com/in/rohan-pandey-145170175/</string>
    <string name="himanshuURL" translatable="false">https://www.linkedin.com/in/himanshu-sharma2950/</string>
    <string name="kanavURL" translatable="false">https://www.linkedin.com/in/kanav-bhagat-133229130/</string>
    <string name="bhavikaURL" translatable="false">https://www.linkedin.com/in/bhavikarana/</string>
    <string name="vaibhavURL" translatable="false">https://www.linkedin.com/in/vaibhav-gautam-171775187/</string>
    <string name="harshURL" translatable="false">https://www.linkedin.com/in/harshbandhey/</string>
    <string name="vrindaURL" translatable="false">https://www.linkedin.com/in/vrinda-narayan-6a42a71a3/</string>
    <string name="tanujURL" translatable="false">https://www.linkedin.com/in/tanuj-dabas-7b28a9151/</string>
    <string name="rishabhURL" translatable="false">https://www.linkedin.com/in/jalanrishabh</string>
    <string name="ayushURL" translatable="false">https://www.linkedin.com/in/ayush-garg-6019aa1a2</string>
    <string name="akshatURL" translatable="false">https://www.linkedin.com/in/akshat-wadhwa-0852761a6</string>
    <string name="vihaanURL" translatable="false">https://www.linkedin.com/in/vihaan-m-a3841811a</string>
    <string name="yashwinURL" translatable="false">https://www.linkedin.com/in/yashwin-agrawal-6b28bb176</string>
    <string name="raunakURL">https://in.linkedin.com/in/raunak-mokhasi-610b41188</string>
    <string name="govt_updates_act">Government Updates</string>
    <string name="guidelines_act">Guidelines</string>
    <string name="myth_act">Myth Busters</string>
    <string name="faq_act">FAQs</string>
    <string name="success_stories_act">Success Stories</string>
    <string name="please_select_one_choice">Please select one choice</string>
    <string name="play_audio">Play Audio</string>
    <string name="information_link">Information Source</string>
    <string name="myth_busters_tile">Myth Busters</string>
    <string name="empty_stats" translatable="false">0</string>
    <string name="chatbot_tile">Chatbot</string>
    <string name="onair_tile">onAIr</string>
    <string name="faqs_tile">FAQs</string>
    <string name="success_stories_tile">Success Stories</string>
    <string name="privacy_policy_url" translatable="false">https://tavlab.iiitd.edu.in/WashKaro/privacy_policy.html</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="survey">Survey</string>
    <string name="language">Language</string>
    <string name="satya_chatbot_url" translatable="false">http://precog.iiitd.edu.in/satya_api/ans</string>
    <string name="satya_chatbot">Satya Chatbot</string>
    <string name="hello" translatable="false">Hello</string>
    <string name="enter_text">Enter Text</string>
    <string name="social_media_title">Twitter Analysis</string>
    <string name="aqi_hyperlocal_title">AQI Hyperlocal Monitoring</string>
    <string name="reset">Reset</string>
    <string name="enter_age">Enter Age :</string>
    <string name="enter_gender">Enter Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="enter_bmi">Enter BMI :</string>
    <string name="enter_bmi_hint">BMI Value</string>
    <string name="suffering_from">Suffering from / Suspicion of :</string>
    <string name="asthma">Asthma</string>
    <string name="bronchitis">Bronchitis</string>
    <string name="pneumonia">Pneumonia</string>
    <string name="tuberculosis">Tuberculosis</string>
    <string name="lung_cancer">Lung Cancer</string>
    <string name="yesterday_aqi">Yesterday\'s AQI :</string>
    <string name="unavailable">Unavailable</string>
    <string name="aqi_prediction_today">AQI Prediction for Today :</string>
    <string name="aqi_hint">AQI</string>
    <string name="geotagging">GeoTagging</string>
    <string name="data_collected_at">Data Collected At :</string>
    <string name="home_hospital">Home / Hospital</string>
</resources>