<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainConsLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_effect"
    tools:context=".aqi_cough.aqi_activity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_corner"

            android:text="@string/reset"
            android:textColor="#FFC107"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"/>


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/headText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="10dp"
                    android:text="@string/aqi_hyperlocal_title"
                    android:padding="10dp"
                    android:background="@drawable/round_corner"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/round_corner"
                android:layout_marginVertical="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_centerVertical="true"
                        android:text="@string/enter_age"

                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/ageText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/textView5"
                        android:layout_alignParentEnd="true"
                        android:layout_marginHorizontal="15dp"
                        android:hint="XX"
                        android:inputType="number"
                        android:textColor="#FFC107"
                        android:textColorHint="#80FFC107"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/round_corner"
                android:layout_marginVertical="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/enter_gender"
                        android:layout_centerVertical="true"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/maleCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/textView4"
                        android:paddingHorizontal="10dp"

                        android:text="@string/male"
                        android:textColor="#FFC107"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <CheckBox
                        android:id="@+id/femaleCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/maleCheck"
                        android:paddingHorizontal="10dp"

                        android:text="@string/female"
                        android:textColor="#FFC107"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <CheckBox
                        android:id="@+id/otherGenderCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/femaleCheck"

                        android:paddingHorizontal="10dp"

                        android:text="@string/other"
                        android:textColor="#FFC107"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/round_corner"
                android:layout_marginVertical="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_centerVertical="true"
                        android:text="@string/enter_bmi"

                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/bmiText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/textView2"
                        android:layout_alignParentEnd="true"
                        android:layout_marginHorizontal="15dp"
                        android:hint="@string/enter_bmi_hint"
                        android:inputType="numberDecimal"
                        android:textColor="#FFC107"
                        android:textColorHint="#80FFC107"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:text="@string/suffering_from"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

              >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <CheckBox
                        android:id="@+id/asthmaCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="5dp"
                        android:layout_marginVertical="5dp"
                        android:includeFontPadding="true"
                        android:text="@string/asthma"
                        android:textColor="#FFC107"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/bronchitisCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/asthmaCheck"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="5dp"
                        android:paddingHorizontal="5dp"
                        android:includeFontPadding="true"
                        android:text="@string/bronchitis"
                        android:textColor="#FFC107"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/pneumoniaCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/asthmaCheck"
                        android:layout_alignLeft="@id/asthmaCheck"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="5dp"
                        android:layout_marginVertical="5dp"
                        android:includeFontPadding="true"
                        android:text="@string/pneumonia"
                        android:textColor="#FFC107"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <CheckBox
                        android:id="@+id/tbCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="5dp"
                        android:layout_marginLeft="130dp"
                        android:layout_toRightOf="@id/bronchitisCheck"
                        android:paddingHorizontal="5dp"
                        android:text="@string/tuberculosis"
                        android:textColor="#FFC107"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/lungCancerCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/asthmaCheck"
                        android:layout_toRightOf="@id/pneumoniaCheck"
                        android:layout_marginRight="10dp"
                        android:layout_marginVertical="5dp"
                        android:text="@string/lung_cancer"
                        android:textColor="#FFC107"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <CheckBox
                        android:id="@+id/otherRespCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/asthmaCheck"
                        android:layout_toRightOf="@id/lungCancerCheck"

                        android:paddingHorizontal="5dp"
                        android:layout_marginVertical="5dp"
                        android:text="@string/other"
                        android:textColor="#FFC107"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                </RelativeLayout>

            </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/round_corner"
                android:layout_marginVertical="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_centerVertical="true"
                        android:padding="10dp"
                        android:text="@string/yesterday_aqi"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/avgAQI"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/textView8"
                        android:layout_alignParentEnd="true"
                        android:layout_marginHorizontal="15dp"
                        android:text="@string/unavailable"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        android:textColor="#FFC107"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/round_corner"
                android:layout_marginVertical="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_centerVertical="true"
                        android:text="@string/aqi_prediction_today"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/aqiPredictText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/textView7"
                        android:layout_alignParentEnd="true"
                        android:layout_marginHorizontal="10dp"
                        android:hint="@string/aqi_hint"
                        android:textSize="16sp"
                        android:inputType="number"
                        android:textColor="#FFC107"
                        android:textColorHint="#80FFC107"
                        android:textStyle="bold"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/round_corner"
                android:layout_marginVertical="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_centerVertical="true"
                        android:text="@string/data_collected_at"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/dataCollectedAt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/textView"
                        android:layout_alignParentEnd="true"
                        android:layout_marginHorizontal="10dp"
                        android:hint="@string/home_hospital"
                        android:textSize="16sp"
                        android:inputType="textPersonName"
                        android:textColor="#FFC107"
                        android:textStyle="bold"
                        android:textColorHint="#80FFC107"/>

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/geotagButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="20dp"
                android:background="#00BCD4"
                android:text="@string/geotagging"
                android:textAllCaps="false"

                android:textColor="#FFC107"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>