<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.aboutActivity"
    android:background="@drawable/gradient_effect">

    <ImageView
        android:id="@+id/tbcindia"
        android:layout_width="414dp"
        android:layout_height="98dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="4dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/tbcindia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/tbcindia_logo" />

    <ImageView
        android:id="@+id/tbassnindiaLogo"
        android:layout_width="340dp"
        android:layout_height="167dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="76dp"
        android:layout_marginRight="4dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/tbass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbcindia"
        app:srcCompat="@drawable/tbassnindia_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="312dp"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/about_bottom_margin"
        android:background="#FF085C"

        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"

        android:text="@string/reference"
        android:textColor="#F8F0F0"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>